# georhiau

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: ccpp.yml
docs/: CMakeLists.txt  notes.txt
georhiau/: CMakeLists.txt
georhiau/algo/: delaunay.hpp  ear_clip.hpp  giftwrap.hpp  inc_trgtn.hpp  mate.hpp  rng.hpp
georhiau/algo/tests/: CMakeLists.txt  delaunay_test.cpp  ear_clip_test.cpp  giftwrap_test.cpp  mate_test.cpp  mate_test.hpp  rng_test.cpp
georhiau/core/: cdl_list.hpp  edge.hpp  point.hpp  polygon.hpp  triangle.hpp  vertex.hpp
georhiau/core/tests/: CMakeLists.txt  edge_test.cpp  point_test.cpp  polygon_test.cpp  vertex_test.cpp
georhiau/driver/: main.cpp
georhiau/examples/: CMakeLists.txt  basic_vs_del_blog1.cpp  circle.cpp  ear_vs_del.cpp  ear_vs_delaunay.cpp  random.cpp  random_rng.cpp  random_triangulation.cpp
georhiau/plot/: .item_container.hpp.swp  .window.hpp.swp  geom.hpp  item_container.hpp  plot.hpp  window.hpp  window_handler.hpp  window_old.hpp
georhiau/view/: geom.hpp  plot.hpp  window.hpp
